syntax = "proto3";

package demo;

option java_package = "lol.maki.demo.grpc";
option java_outer_classname = "HelloServiceProto";
option java_multiple_files = true;
option go_package = ".;demo";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc LotsOfReplies (HelloRequest) returns (stream HelloResponse);
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);
  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}